# EasyExampleApp

./: .gitignore  .project.pyproject  .project.qmlproject  README.md  TEMP.md  TODO.md  Untitled.ipynb  compare_2.ipynb  compare_3-Copy1.ipynb  compare_3.ipynb  compare_Sin.ipynb  compare_damped_sin-Copy1.ipynb  compare_damped_sin.ipynb  compare_qwe.ipynb  cpp_project.pro  project.pyproject  project.qmlproject  py_project.pyproject  pyproject.toml  qml_project.qmlproject  qml_sandbox.qmlproject  resources.qrc  settings.ini
.github/defaults/: probot-settings.yml
.github/workflows/: build.yml  on_create.yaml  on_create.yml
EasyExampleApp/: main.py  resources.qrc
EasyExampleApp/Gui/: main.qml
EasyExampleApp/Logic/: Analysis.py  Application.py  Calculator.py  Calculators.py  Connections.py  Data.py  EasyApp.py  Experiment 2.py  Experiment.py  Fittables.py  Fitting 2.py  Fitting 3.py  Fitting 4.py  Fitting.py  Helpers.py  Logging 2.py  Logging.py  Model 2.py  Model.py  Parameters.py  Plotting.py  Project.py  PyProxy.py  Status.py  Summary.py
docs/: index.html
easyExampleApp/: main.cpp  main.py  resources.qrc
easyExampleApp/Gui/: main.qml
easyExampleApp/Logic/: Calculator.py  Experiment.py  Fitting.py  Helpers.py  Model.py  Parameters.py  Plotting.py  Project.py  PyProxy.py  PyQmlProxy.py  QtDataStore.py  QtInterface.py  (+3 more)
examples/: Co2SiO4_experiment_short.cif  Co2SiO4_model_best.cif  Co2SiO4b_model.cif  Default_experiment.cif  Gaussian.json  PbSO4.rcif  PbSO4_experiment.cif  PbSO4_experiment.rcif  PbSO4_model.cif  PicoScope.json
tests/: screenshots.py
(+261 files in other folders)
