[build-system]
requires = ['poetry>=1.0']
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'EasyExampleApp'
version = '0.0.2'
description = "Advanced example of EasyScience applications"
license = 'BSD-3-Clause'
authors = ['Andrew Sazonov']
packages = [ { include = "EasyExampleApp" } ]

[tool.poetry.dependencies]
python = '^3.8, <3.9'
easyApp = { git = 'https://github.com/easyScience/easyApp.git', rev = 'plotly2' }
toml = '^0.10.2'
